--- a/index.html
+++ b/index.html
@@ -2,14 +2,29 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1, minimal-ui">
+  <title>My App</title>
+  <!-- Add to home screen for Android and modern mobile browsers -->
+  <link rel="manifest" href="static/manifest.json">
+  <meta name="theme-color" content="#4DBA87">
+
+  <!-- Add to home screen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <title>My App</title>
+
+  <!-- Add to home screen for Windows -->
+  <meta name="msapplication-TileColor" content="#000000">
+
+  <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
   <!-- built style files will be auto injected -->
 </head>
 <body>
+  <noscript>
+      For some reason, it's available in javascript on your device.
+    </noscript>
   <div id="app"></div>
+  <!-- Todo: only include in production -->
+  <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
   <!-- built script files will be auto injected -->
 </body>
 </html>
